<resources>
    <string name="app_name">Cat Weather</string>
    <string name="weather_api_key">ff946992f1ee4f3d80385853210111</string>
    <string name="location_load">Location is loading…</string>
    <string name="current_weather">Condition</string>
    <string name="temperature">Temperature</string>

    <!--    images contentDescription -->
    <string name="current_weather_image_content_description">Current weather condition cat</string>
    <string name="astro_sun_image_content_description">Sunrise/sunset</string>
    <string name="astro_moon_image_content_description">Moonrise/moonset</string>
    <!--    images contentDescription -->


    <!--    current weather fragment-->
    <string name="current_weather_temperature_template">%1$.1f° C</string>
    <string name="current_weather_feelslike_template">%1$.1f° C</string>
    <string name="current_weather_feelslike_label_template">Feels like</string>
    <string name="current_weather_wind_label">Wind</string>
    <string name="current_weather_wind_template">%1$.2fkm/h  %2$s</string>
    <!--    current weather fragment-->


    <!--    detail weather fragment-->
    <string name="detail_weather_feelslike_template">Feels like %1$.1f° C</string>
    <string name="detail_weather_current_t_template">%1$.1f° C</string>
    <string name="detail_weather_wind_template">%1$.2fkm/h  %2$s</string>
    <string name="detail_weather_wind_label_template">Wind speed </string>
    <string name="detail_weather_precipitation_label_template">Precipitation </string>
    <string name="detail_weather_precipitation_template">%1$.1fmm</string>
    <string name="detail_weather_humidity_label_template">Humidity </string>
    <string name="detail_weather_humidity_template">%1$.0f%%</string>
    <string name="detail_weather_visibility_label_template">Visibility </string>
    <string name="detail_weather_visibility_template">%1$.1fkm</string>
    <string name="detail_weather_pressure_label_template">Pressure </string>
    <string name="detail_weather_pressure_template">%1$.2fmm</string>
    <string name="detail_weather_moon_phase_template">Moon phase is   %1s</string>
    <string name="detail_weather_moon_illumination_template">Moon illumination   %1s%%</string>
    <string name="detail_weather_astro_label">Astro:</string>
    <!--    detail weather fragment-->

    <!--    forecast weather fragment item-->
    <string name="forecast_weather_fragment_item_wind_template">Wind speed: %1$.1fkm/h</string>
    <string name="forecast_weather_fragment_item_temperature_template">Temperature: min %1$.2f° max %2$.2f° C</string>
    <!--    forecast weather fragment item-->

    <string name="no_network_connection">No network connection. Please, turn it on.</string>
    <string name="Cancel">Cancel</string>
    <string name="gps_network_not_enabled">GPS is not enabled. Please, turn it on.</string>
    <string name="open_location_settings">Open setting…</string>
    <string name="notificationChannelName">CatWeather notification channel</string>

    <!--    about page-->
    <string name="aboutPageHelpText">Swipe right to get detailed weather and forecat. Double click on location to type your city manually.</string>
    <string name="aboutPageCatOfferText">If your have good photos of cats for app, you can send it on email:</string>
    <string name="mailTo">grobych@gmail.com</string>
    <string name="aboutPageContactsText">Contacts</string>
    <string name="githubToText">GitHub:</string>
    <string name="linkedinToText">LinkedIn:</string>
    <string name="apiPowered">"Powered by "</string>
    <string name="weatherAPILink">Powered by <a href="https://www.weatherapi.com/">Free Weather API</a></string>
    <string name="githubToLink">https://github.com/Grobych</string>
    <string name="linkedinToLink">https://www.linkedin.com/in/a-globa/</string>
    <!--    about page-->

</resources>