<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="detailWeather"
            type="com.globa.catweather.models.DetailDayWeather" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detailWeatherImageView"
                android:background="@drawable/ic_cloud_test"
                android:contentDescription="@string/app_name"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detailWeatherConditionTextView"
                    android:text='@{detailWeather.component1().condition, default = ""}'/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detailWeatherCurrentTemperature"
                    android:text="@{@string/detail_weather_current_t_template(detailWeather.component1().temp)}"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detailWeatherFeelslikeTemperature"
                    android:text="@{@string/detail_weather_feelslike_template(detailWeather.component1().feelsLike)}"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_weather_wind_label_template"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detailWeatherWindSpeedTextView"
                android:text="@{@string/detail_weather_wind_template(detailWeather.component1().windSpeed, detailWeather.component1().windDirection)}"
                android:layout_gravity="end"/>
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/detailWeatherWindDirectionTextView"-->
<!--                android:text="@{detailWeather.component1().windDirection}"-->
<!--                android:layout_gravity="end"/>-->
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_weather_precipitation_label_template"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detailWeatherPrecipitationTextView"
                android:text="@{@string/detail_weather_precipitation_template(detailWeather.component3())}"
                android:layout_gravity="end"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_weather_humidity_label_template"
                android:layout_gravity="start"/>

            <TextView
                android:id="@+id/detailWeatherHumidityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@{@string/detail_weather_humidity_template(detailWeather.component4())}"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_weather_visibility_label_template"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detailWeatherVisibilityTextView"
                android:text="@{@string/detail_weather_visibility_template(detailWeather.component5())}"
                android:layout_gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_weather_pressure_label_template"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detailWeatherPressureTextView"
                android:text="@{@string/detail_weather_pressure_template(detailWeather.component6())}"
                android:layout_gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_weather_astro_label"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_cloud_test"
                    android:layout_gravity="start"
                    android:contentDescription="@string/astro_sun_image_content_description"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detailWeatherSunriseTextView"
                    android:text="@{detailWeather.component2().component1()}"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detailWeatherSunsetTextView"
                    android:text="@{detailWeather.component2().component2()}"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="end"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_cloud_test"
                    android:layout_gravity="start"
                    android:contentDescription="@string/astro_moon_image_content_description"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detailWeatherMoonriseTextView"
                    android:text="@{detailWeather.component2().component3()}"
                    android:layout_gravity="end"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detailWeatherMoonsetTextView"
                    android:text="@{detailWeather.component2().component4()}"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="end"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detailWeatherMoonPhaseTextView"
                android:text="@{@string/detail_weather_moon_phase_template(detailWeather.component2().component5())}"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detailWeatherMoonIlluminationTextView"
                android:text="@{@string/detail_weather_moon_illumination_template(detailWeather.component2().component6())}"/>
        </LinearLayout>
    </LinearLayout>
</layout>
